@@ -3,6 +3,8 @@ import moe.tlaster.precompose.koin.koinViewModel
 import moe.tlaster.precompose.navigation.NavHost
 import moe.tlaster.precompose.navigation.rememberNavigator
 import moe.tlaster.precompose.navigation.transition.NavTransition
+import presentation.screens.dayPartMenu.DayPartMenuScreen
+import presentation.screens.dayPartMenu.DayPartMenuViewModel
 import presentation.screens.mainMenu.MainMenuScreen
 import presentation.screens.mainMenu.MainMenuViewModel
 
@@ -16,7 +18,12 @@ fun Navigation() {
     ) {
         scene(route = "/mainMenu", navTransition = NavTransition()) {
             val vm = koinViewModel(MainMenuViewModel::class)
-            MainMenuScreen(vm)
+            MainMenuScreen(vm) {navigator.navigate("/dayPartMenu/$it")}
+        }
+
+        scene(route = "/dayPartMenu/{part}", navTransition = NavTransition()) {
+            val vm = koinViewModel(DayPartMenuViewModel::class)
+            DayPartMenuScreen(vm)
         }
     }
 }
