@@ -1,10 +1,12 @@
 package di
 
 import data.calendar.CalendarRepository
+import data.screens.dayPartMenu.DayPartMenuRepository
 import data.screens.mainMenu.MainMenuRepository
 import org.koin.core.context.startKoin
 import org.koin.dsl.module
 import presentation.calendar.CalendarViewModel
+import presentation.screens.dayPartMenu.DayPartMenuViewModel
 import presentation.screens.mainMenu.MainMenuViewModel
 
 fun initKoin() {
@@ -13,6 +15,9 @@ fun initKoin() {
             module {
                 single { MainMenuRepository() }
                 factory { MainMenuViewModel() }
+
+                single { DayPartMenuRepository() }
+                factory { DayPartMenuViewModel() }
 
                 single { CalendarRepository()}
                 factory { CalendarViewModel(get())}
