@@ -1,4 +1,11 @@
 package presentation.screens.dayPartMenu
 
-class DayPartMenuViewModel {
+import data.screens.dayPartMenu.DayPartMenuUIState
+import kotlinx.coroutines.flow.MutableStateFlow
+import kotlinx.coroutines.flow.asStateFlow
+import moe.tlaster.precompose.viewmodel.ViewModel
+
+class DayPartMenuViewModel : ViewModel(){
+    private val _uiState = MutableStateFlow(DayPartMenuUIState())
+    val uiState = _uiState.asStateFlow()
 }
